--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/a.css">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="description" content="Somen Rolen web site. Information Security"> 
+<meta name="Keywords" content="Somen, Rolen, SomenRolen, ИБ, Информационная, безопасность, инфобез, КИБ, Кибер, Информационная безопасность">
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -14,7 +17,9 @@
 <body>
 <div class="preloader" style="">
   <div class="preloader__row">
-    <div class="preloader__item"><img src="icon.png" style="width:200px;height:200px;"></div>
+					<div class="loading">Loading... Please wait.</div>
+    <div class="preloader__item">
+			<img src="icon.png" style="width:200px;height:200px;"></div>
   </div>
 </div>
 <div class="header">
@@ -30,14 +35,14 @@
 </div>
 <div class="header__out">
     <div class="header__title_margin">Somen Rolen</div>
-    <div class="header__description__margin">Somen Rolen is an Information Security specialist. Here are a lot of materials for you to learn Inforamtion Security.</div>
+    <div class="header__description__margin">Somen Rolen is an Information Security specialist. Here are a lot of materials for you to learn Information Security.</div>
 		<div class="down__arrow margin95"><a href="#"><i class="fa fa-arrow-down" aria-hidden="true"></i></a></div>
 </div>
 <script>
 window.onload = function () {
     window.setTimeout(function () {
 			document.getElementsByClassName('preloader')[0].style='display:none;';
-    }, 500);
+    }, 1500);
   }
 </script>
 </body>
