--- a/index.html
+++ b/index.html
@@ -46,5 +46,20 @@ window.onload = function () {
     }, 1500);
   }
 </script>
+<div class="other__body">
+	<div class="articles__inner">
+		<div class="link">
+			<a href="/articles/Сохраняем_виртуальную_машину_как_физическую_ОС_на_физический_диск._10-03-2021.html"></a>
+		</div>
+		<div class="article__contents">
+			<div class="articles__title">
+				Vhd2disk
+			</div>
+			<div class="articles__description">
+				Как конвертировать виртуальную машину в физический диск.
+			</div>
+		</div>
+	</div>
+</div>
 </body>
 </html>
