--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@ window.onload = function () {
   }
 </script>
 <div class="other__body">
+	<a href="/articles/Сохраняем_виртуальную_машину_как_физическую_ОС_на_физический_диск._10-03-2021.html">
 	<div class="articles__inner">
-		<div class="link">
-			<a href="/articles/Сохраняем_виртуальную_машину_как_физическую_ОС_на_физический_диск._10-03-2021.html"></a>
+		<div class="link" style="background:url('images/vhd2disk.jpg');background-repeat:no-repeat;background-size:cover;">
 		</div>
 		<div class="article__contents">
 			<div class="articles__title">
@@ -60,6 +60,7 @@ window.onload = function () {
 			</div>
 		</div>
 	</div>
+	</a>
 </div>
 </body>
 </html>
