--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ window.onload = function () {
 <div class="other__body">
 	<a href="/articles/Сохраняем_виртуальную_машину_как_физическую_ОС_на_физический_диск._10-03-2021.html">
 	<div class="articles__inner">
-		<div class="link" style="background:url('images/vhd2disk.jpg');background-repeat:no-repeat;background-size:cover;">
+		<div class="link" style="background:url('images/vhd2dsk.png');background-repeat:no-repeat;background-size:contain;">
 		</div>
 		<div class="article__contents">
 			<div class="articles__title">
